--- a/a/head.html
+++ b/a/head.html
@@ -17,7 +17,7 @@
 				<p>This site does not support Microsoft Internet Explorer due to its lack of compatibility with web specifications.</p><p>Please use a modern browser such as <a href="//chrome.google.com/">Chrome</a> to view this site.</p>
 			<![endif]-->
 			<!--[if !IE]> -->
-				<noscript>Your JavaScript is disabled. Please enable JavaScript to view this site.</noscript>
+				<noscript>Your JavaScript is disabled. Please enable JavaScript to properly view this site.</noscript>
 			<!-- <![endif]-->
 		</div>
 		<div id="cont">
@@ -29,7 +29,6 @@
 				<a href="/learn/">Learn</a>
 				<a href="/dev/">Create</a>
 				<nav>
-					<a href="/dev/">Home</a>
 					<a href="/dev/list/">List</a>
 					<a href="/dev/new/">New</a>
 					<a href="/dev/docs/">Docs</a>
