--- a/chat/room.html
+++ b/chat/room.html
@@ -1,6 +1,6 @@
 <div class="row" style="height: calc(100% - 120px)">
-	<div id="chat" class="half scrly hglt pad pre" style="height: 100%; width: 80%;"></div>
-	<div class="half umar" style="width: 19.5%">
+	<div id="chat" class="half hglt pad pre scrly"></div>
+	<aside id="sidebar" class="half umar">
 		<div id="roominfo">
 			<h1><span id="name">$name</span> <small><a id="edit">Edit</a></small></h1>
 			<p id="desc">$desc</p>
@@ -13,19 +13,41 @@
 		<hr />
 		<h2>Users:</h2>
 		<div id="users"></div>
-	</div>
+	</aside>
 </div>
 <textarea autofocus="" id="ta" class="umar" style="width: 100%; height: 96px;"></textarea><button id="btn" class="blk" onclick="send()">Post</button>
 <p id="ts" hidden="">You are viewing old messages. <a href="/chat/$id">Join room</a>.</p>
 <script>
-	var noPageOverflow = 420;
-	var hash = parseInt(location.hash.substr(1));
-	var socket = new WebSocket('ws://localhost:8125/chat/$id' + (!isNaN(hash) ? '/' + hash : ''));
-	var onBottom = true;
-	var state = 1;
-	var skipped;
-	var cont = document.getElementById('chat');
-	var lock = true;
+	var noPageOverflow = 420,
+		hash = parseInt(location.hash.substr(1)),
+		socket = new WebSocket('ws://localhost:8125/chat/$id' + (!isNaN(hash) ? '/' + hash : '')),
+		onBottom = true,
+		state = 1,
+		skipped,
+		cont = document.getElementById('chat'),
+		lock = true,
+		ctrls = document.createElement('div'),
+		ctrlsDelete = document.createElement('a'),
+		ctrlsFlag = document.createElement('a'),
+		ctrlsStar = document.createElement('a'),
+		e;
+	ctrls.classList.add('ctrls');
+	ctrlsStar.textContent = '★';
+	ctrlsStar.onclick = function() {
+		socket.send(JSON.stringify({event: this.classList.contains('clkd') ? 'unstar' : 'star', id: parseInt(this.parentNode.parentNode.id)}));
+		this.classList.toggle('clkd');
+	};
+	ctrlsDelete.textContent = '✕';
+	ctrlsDelete.onclick = function() {
+		
+	};
+	ctrlsFlag.textContent = '⚑';
+	ctrlsFlag.onclick = function() {
+		
+	};
+	ctrls.appendChild(ctrlsStar);
+	ctrls.appendChild(ctrlsDelete);
+	ctrls.appendChild(ctrlsFlag);
 	cont.onscroll = function(e) {
 		if (!lock &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 144) {
 			e.preventDefault();
@@ -34,6 +56,9 @@
 		}
 		onBottom = cont.scrollTop + cont.offsetHeight >= cont.scrollHeight - 2;
 	};
+	addEventListener('resize', function() {
+		if (onBottom) cont.scrollTop = cont.scrollHeight;
+	});
 	function send(value) {
 		if (!(value = value || document.getElementById('ta').value)) return;
 		socket.send(JSON.stringify({event: 'post', body: value}));
@@ -42,21 +67,21 @@
 		cont.scrollTop = cont.scrollHeight;
 		cont.onscroll();
 	};
-	function update(nstate) {
+	function statechange(nstate) {
 		if (nstate == 1 &amp;&amp; document.getElementById('ta').value) nstate = 2;
 		if (state != nstate) {
 			state = nstate;
-			socket.send(JSON.stringify({event: 'update', state: state}));
+			socket.send(JSON.stringify({event: 'statechange', state: state}));
 		}
 	};
 	function inactive() {
-		update(0);
+		statechange(0);
 	};
 	var timeout = setTimeout(inactive, 10000);
 	function active() {
 		clearTimeout(timeout);
 		timeout = setTimeout(inactive, 10000);
-		update(1);
+		statechange(1);
 	};
 	addEventListener('keyup', active);
 	addEventListener('keydown', active);
@@ -76,27 +101,49 @@
 		}
 		if (data.event == 'init' || data.event == 'add') {
 			var div = document.createElement('div');
-			div.classList.add('hglt');
-			div.classList.add('umar');
-			div.classList.add('spad');
-			div.classList.add('scrl');
-			div.classList.add('clearfix');
-			div.textContent = data.body;
+			div.classList.add('comment');
+			div.appendChild(document.createTextNode(data.body));
 			var sig = document.createElement('span');
 			sig.classList.add('c-sig');
-			sig.textContent = '-' + data.user + ', ';
+			sig.appendChild(document.createTextNode('-' + data.user + ', '));
 			var permalink = document.createElement('a');
 			if (!data.time) data.time = new Date().getTime();
 			permalink.appendChild(agot(data.time));
-			permalink.href = '#' + (div.id = data.num);
+			permalink.href = '#' + (div.id = data.id);
 			sig.appendChild(permalink);
+			sig.appendChild(document.createTextNode(' '));
+			var starcount = document.createElement('span');
+			starcount.classList.add('starcount');
+			starcount.appendChild(document.createTextNode((starcount.dataset.count = data.stars || 0) + '★'));
+			sig.appendChild(starcount);
+			if (document.getElementById('nav').childNodes[13].textContent == data.user) {
+				var tCtrls = ctrls.cloneNode(true);
+				tCtrls.children[0].onclick = ctrlsStar.onclick;
+				tCtrls.children[1].onclick = ctrlsDelete.onclick;
+				tCtrls.children[2].onclick = ctrlsFlag.onclick;
+				div.appendChild(tCtrls);
+			}
 			div.appendChild(sig);
 			if (data.before) cont.insertBefore(div, cont.firstChild);
 			else cont.appendChild(div);
 			if (data.event == 'add') new Audio('/a/beep.mp3').play();
 			if (onBottom &amp;&amp; !location.hash) cont.scrollTop = cont.scrollHeight;
-			else cont.scrollTop += div.offsetHeight;
 			cont.onscroll();
+		} else if (data.event == 'selfstar') {
+			var e;
+			if (e = document.getElementById(data.id)) e.getElementsByClassName('ctrls')[0].firstChild.classList.add('clkd');
+		} else if (data.event == 'star') {
+			if (e = document.getElementById(data.id)) {
+				e = e.getElementsByClassName('starcount')[0];
+				e.removeChild(e.firstChild);
+				e.appendChild(document.createTextNode(++e.dataset.count + '★'));
+			}
+		} else if (data.event == 'unstar') {
+			if (e = document.getElementById(data.id)) {
+				e = e.getElementsByClassName('starcount')[0];
+				e.removeChild(e.firstChild);
+				e.appendChild(document.createTextNode(--e.dataset.count + '★'));
+			}
 		} else if (data.event == 'adduser') {
 			var div = document.createElement('div');
 			div.id = 'user-' + (div.textContent = data.name);
@@ -105,14 +152,10 @@
 			var div = document.getElementById('user-' + data.name);
 			div.parentNode.removeChild(div);
 		} else if (data.event == 'statechange') {
-			if (data.state == 0)
-				document.getElementById('user-' + data.user).classList.add('inactive');
-			else
-				document.getElementById('user-' + data.user).classList.remove('inactive');
-			if (data.state == 2)
-				document.getElementById('user-' + data.user).classList.add('writing');
-			else
-				document.getElementById('user-' + data.user).classList.remove('writing');
+			if (data.state == 0) document.getElementById('user-' + data.user).classList.add('inactive');
+			else document.getElementById('user-' + data.user).classList.remove('inactive');
+			if (data.state == 2) document.getElementById('user-' + data.user).classList.add('writing');
+			else document.getElementById('user-' + data.user).classList.remove('writing');
 		} else if (data.event == 'info-skipped') {
 			skipped = data.body;
 			if (data.ts) {
@@ -125,32 +168,30 @@
 			document.title = (document.getElementById('name').textContent = document.getElementById('nameedit').value = data.name) + ' | Chat | DevDoodle';
 			document.getElementById('desc').textContent = document.getElementById('descedit').value = data.desc;
 			var div = document.createElement('div');
-			div.classList.add('hglt');
-			div.classList.add('umar');
-			div.classList.add('spad');
-			div.classList.add('scrl');
-			div.classList.add('clearfix');
-			div.textContent = 'Room description updated to "'+data.name+'": '+data.desc;
+			div.classList.add('comment');
+			div.textContent = 'Room description updated to "' + data.name + '": ' + data.desc;
 			var sig = document.createElement('span');
 			sig.classList.add('c-sig');
 			sig.textContent = '-Bot, ';
 			var permalink = document.createElement('a');
 			permalink.appendChild(agot(new Date().getTime()));
-			permalink.href = '#' + data.num;
+			permalink.href = '#' + (div.id = data.id);
 			sig.appendChild(permalink);
 			div.appendChild(sig);
-			cont.appendChild(div)
+			cont.appendChild(div);
 			if (onBottom &amp;&amp; !location.hash) cont.scrollTop = cont.scrollHeight;
 			else cont.scrollTop += div.offsetHeight;
 			cont.onscroll();
 		} else if (data.event == 'err') {
 			alert('Error: ' + data.body);
+			if (data.revertInfo) {
+				document.getElementById('nameedit').value = document.getElementById('name').textContent;
+				document.getElementById('descedit').value = document.getElementById('desc').textContent;
+			}
 		}
 	};
 	socket.onclose = function() {
-		if (confirm('Connection error. Reload?')) {
-			location.reload();
-		}
+		if (confirm('Connection error. Reload?')) location.reload();
 	};
 	document.getElementById('ta').onkeypress = function(e) {
 		if (e.keyCode == 13 &amp;&amp; !e.shiftKey &amp;&amp; !e.metaKey) {
@@ -177,6 +218,16 @@
 	};
 </script>
 <style>
+	#chat { height: 100% }
+	.comment:hover {
+		outline: 1px dotted #000;
+	}
+	.ctrls { border: 1px solid #aaa }
+	.starcount {
+		font-weight: bold;
+		color: #d60;
+	}
+	.starcount[data-count="0"] { display: none }
 	.inactive {
 		color: red;
 		font-style: italic;
@@ -187,4 +238,15 @@
 	}
 	#editform { margin: 0 }
 	#users:empty::after { content: 'No users in room' }
+	.comment:not(:hover) .ctrls:not(:hover) { display: none }
+	@media (max-width: 699px) {
+		#chat { width: 100% }
+		#sidebar { display: none }
+	}
+	@media (min-width: 700px) {
+		#chat {
+			width: 80%;
+		}
+		#sidebar { width: 19.5% }
+	}
 </style>
