Copied chat-post code for room info updates

--- a/chat/room.html
+++ b/chat/room.html
@@ -169,18 +169,25 @@
 			document.getElementById('desc').textContent = document.getElementById('descedit').value = data.desc;
 			var div = document.createElement('div');
 			div.classList.add('comment');
-			div.textContent = 'Room description updated to "' + data.name + '": ' + data.desc;
+			div.appendChild(document.createTextNode('Room description updated to "' + data.name + '": ' + data.desc));
 			var sig = document.createElement('span');
 			sig.classList.add('c-sig');
-			sig.textContent = '-Bot, ';
+			sig.appendChild(document.createTextNode('-Bot, '));
 			var permalink = document.createElement('a');
-			permalink.appendChild(agot(new Date().getTime()));
+			if (!data.time) data.time = new Date().getTime();
+			permalink.appendChild(agot(data.time));
 			permalink.href = '#' + (div.id = data.id);
 			sig.appendChild(permalink);
+			sig.appendChild(document.createTextNode(' '));
+			var starcount = document.createElement('span');
+			starcount.classList.add('starcount');
+			starcount.appendChild(document.createTextNode((starcount.dataset.count = 0) + '★'));
+			sig.appendChild(starcount);
 			div.appendChild(sig);
-			cont.appendChild(div);
+			if (data.before) cont.insertBefore(div, cont.firstChild);
+			else cont.appendChild(div);
+			if (data.event == 'add') new Audio('/a/beep.mp3').play();
 			if (onBottom &amp;&amp; !location.hash) cont.scrollTop = cont.scrollHeight;
-			else cont.scrollTop += div.offsetHeight;
 			cont.onscroll();
 		} else if (data.event == 'err') {
 			alert('Error: ' + data.body);
