Shortened (unimplemented) user picture urls

--- a/dev/canvas.html
+++ b/dev/canvas.html
@@ -7,7 +7,7 @@
 </section>
 <section id="meta">
 	<div class="rit user user-$op">
-		<img src="/ap/pic/?n=$op" width="40" height="40" />
+		<img src="/ap/pic/$op" width="40" height="40" />
 		<div>
 			<a href="/user/$op/">$op</a>
 			<small class="rep">$op-rep</small>
