--- a/chat/room.html
+++ b/chat/room.html
@@ -12,7 +12,10 @@
 		</form>
 		<hr />
 		<h2>Users:</h2>
-		<div id="users"></div>
+		<ul id="users"></ul>
+		<hr />
+		<h2>Stars:</h2>
+		<ul id="stars"></ul>
 	</aside>
 </div>
 <textarea autofocus="" id="ta" class="umar" style="width: 100%; height: 96px;"></textarea><button id="btn" class="blk" onclick="send()">Post</button>
@@ -49,8 +52,7 @@
 	ctrls.appendChild(ctrlsDelete);
 	ctrls.appendChild(ctrlsFlag);
 	cont.onscroll = function(e) {
-		if (!lock &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 144) {
-			e.preventDefault();
+		if (e &amp;&amp; !lock &amp;&amp; innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 72) {
 			skipped = Math.max(0, skipped - 1);
 			socket.send(JSON.stringify({event: 'req', skip: skipped}));
 		}
@@ -112,6 +114,7 @@
 			permalink.href = '#' + (div.id = data.id);
 			sig.appendChild(permalink);
 			sig.appendChild(document.createTextNode(' '));
+			div.appendChild(sig);
 			var starcount = document.createElement('span');
 			starcount.classList.add('starcount');
 			starcount.appendChild(document.createTextNode((starcount.dataset.count = data.stars || 0) + '★'));
@@ -123,9 +126,10 @@
 				tCtrls.children[2].onclick = ctrlsFlag.onclick;
 				div.appendChild(tCtrls);
 			}
-			div.appendChild(sig);
-			if (data.before) cont.insertBefore(div, cont.firstChild);
-			else cont.appendChild(div);
+			if (data.before) {
+				cont.insertBefore(div, cont.firstChild);
+				cont.scrollTop += div.offsetHeight;
+			} else cont.appendChild(div);
 			if (data.event == 'add') new Audio('/a/beep.mp3').play();
 			if (onBottom &amp;&amp; !location.hash) cont.scrollTop = cont.scrollHeight;
 			cont.onscroll();
@@ -134,23 +138,78 @@
 			if (e = document.getElementById(data.id)) e.getElementsByClassName('ctrls')[0].firstChild.classList.add('clkd');
 		} else if (data.event == 'star') {
 			if (e = document.getElementById(data.id)) {
-				e = e.getElementsByClassName('starcount')[0];
+				e = e.getElementsByClassName('starcount')[0]
 				e.removeChild(e.firstChild);
 				e.appendChild(document.createTextNode(++e.dataset.count + '★'));
-			}
+				if (e = document.getElementById(data.id + 's')) {
+					e = e.firstChild;
+					var f;
+					while (f = e.firstChild) e.removeChild(f);
+					e.appendChild(document.createTextNode(++e.dataset.count + '★ '));
+				} else {
+					var li = document.createElement('li'),
+						div = document.getElementById(data.id),
+						id = div.id;
+					div.id = '';
+					var divClone = div.cloneNode(true);
+					div.id = id;
+					divClone.id = div.id + 's';
+					divClone.removeChild(divClone.getElementsByClassName('ctrls')[0]);
+					var starcountClone = divClone.getElementsByClassName('starcount')[0];
+					starcountClone.appendChild(document.createTextNode(' '));
+					divClone.insertBefore(starcountClone, divClone.firstChild);
+					li.appendChild(divClone);
+					document.getElementById('stars').appendChild(li);
+				}
+			} else request('/api/chat/' + data.id, function(res) {
+					try {
+						var data = JSON.parse(res);
+					} catch(err) {
+						console.log(err);
+						return alert('JSON Error. Response was: ' + e.data);
+					}
+					var li = document.createElement('li'),
+						div = document.createElement('div'),
+						starcount = document.createElement('span'),
+						sig = document.createElement('span');
+					div.id = data.id + 's';
+					div.classList.add('comment');
+					starcount.classList.add('starcount');
+					starcount.appendChild(document.createTextNode((starcount.dataset.count = data.stars) + '★ '));
+					div.appendChild(starcount);
+					div.appendChild(document.createTextNode(data.body));
+					sig.classList.add('c-sig');
+					sig.appendChild(document.createTextNode('-' + data.user + ', '));
+					var permalink = document.createElement('a');
+					if (!data.time) data.time = new Date().getTime();
+					permalink.appendChild(agot(data.time));
+					permalink.href = '#' + data.id;
+					sig.appendChild(permalink);
+					sig.appendChild(document.createTextNode(' '));
+					div.appendChild(sig);
+					li.appendChild(div);
+					document.getElementById('stars').appendChild(li);
+				});
 		} else if (data.event == 'unstar') {
 			if (e = document.getElementById(data.id)) {
 				e = e.getElementsByClassName('starcount')[0];
 				e.removeChild(e.firstChild);
 				e.appendChild(document.createTextNode(--e.dataset.count + '★'));
+				if (e = document.getElementById(data.id + 's')) {
+					e = e.firstChild;
+					if (--e.dataset.count &lt; 1) return e.parentNode.parentNode.removeChild(e.parentNode);
+					var f;
+					while (f = e.firstChild) e.removeChild(f);
+					e.appendChild(document.createTextNode(e.dataset.count + '★ '));
+				}
 			}
 		} else if (data.event == 'adduser') {
-			var div = document.createElement('div');
-			div.id = 'user-' + (div.textContent = data.name);
-			document.getElementById('users').appendChild(div);
+			var li = document.createElement('li');
+			li.id = 'user-' + (li.textContent = data.name);
+			document.getElementById('users').appendChild(li);
 		} else if (data.event == 'deluser') {
-			var div = document.getElementById('user-' + data.name);
-			div.parentNode.removeChild(div);
+			var li = document.getElementById('user-' + data.name);
+			li.parentNode.removeChild(li);
 		} else if (data.event == 'statechange') {
 			if (data.state == 0) document.getElementById('user-' + data.user).classList.add('inactive');
 			else document.getElementById('user-' + data.user).classList.remove('inactive');
@@ -163,7 +222,11 @@
 				document.getElementById('ts').hidden = false;
 			}
 		} else if (data.event == 'info-complete') {
-			complete();
+			lock = false;
+			if (!isNaN(hash)) {
+				location.hash = '';
+				location.hash = '#' + hash;
+			};
 		} else if (data.event == 'info-update') {
 			document.title = (document.getElementById('name').textContent = document.getElementById('nameedit').value = data.name) + ' | Chat | DevDoodle';
 			document.getElementById('desc').textContent = document.getElementById('descedit').value = data.desc;
@@ -206,13 +269,6 @@
 			e.preventDefault();
 		}
 	};
-	function complete() {
-		lock = false;
-		if (!isNaN(hash)) {
-			location.hash = '';
-			location.hash = '#' + hash;
-		}
-	};
 	document.getElementById('edit').onclick = function() {
 		document.getElementById('roominfo').hidden = true;
 		document.getElementById('editform').hidden = false;
@@ -226,13 +282,12 @@
 </script>
 <style>
 	#chat { height: 100% }
-	.comment:hover {
-		outline: 1px dotted #000;
-	}
+	.comment:hover { outline: 1px dotted #000 }
 	.ctrls { border: 1px solid #aaa }
 	.starcount {
 		font-weight: bold;
 		color: #d60;
+		line-height: 1.2;
 	}
 	.starcount[data-count="0"] { display: none }
 	.inactive {
@@ -243,17 +298,21 @@
 		color: green;
 		font-weight: bold;
 	}
+	#stars {
+		list-style-type: none;
+		padding: 0;
+	}
+	#stars li { margin: 4px 0 }
 	#editform { margin: 0 }
 	#users:empty::after { content: 'No users in room' }
+	#stars:empty::after { content: 'No starred messages' }
 	.comment:not(:hover) .ctrls:not(:hover) { display: none }
 	@media (max-width: 699px) {
 		#chat { width: 100% }
 		#sidebar { display: none }
 	}
 	@media (min-width: 700px) {
-		#chat {
-			width: 80%;
-		}
+		#chat { width: 80% }
 		#sidebar { width: 19.5% }
 	}
 </style>
