Search this site -> Search DevDoodle

--- a/a/head.html
+++ b/a/head.html
@@ -37,6 +37,6 @@
 				<a href="/chat/">Chat</a>
 				<a href="/login/">Login</a>
 				<a href="/mod/">Mod</a>
-				<form action="/search/"><input type="text" name="q" value="$search" style="line-height: 16px;" placeholder="Search this site" /></form>
+				<form action="/search/"><input type="text" name="q" value="$search" style="line-height: 16px;" placeholder="Search DevDoodle" /></form>
 			</nav>
 			<div id="content">
