Fixed missing comma in html program JS

--- a/dev/html.html
+++ b/dev/html.html
@@ -126,7 +126,7 @@
 	var footerOff = true,
 		noPageOverflow = 400,
 		mainContentEl = document.getElementById('main'),
-		mainBottomPad = 20
+		mainBottomPad = 20,
 		html = document.getElementById('html'),
 		css = document.getElementById('css'),
 		js = document.getElementById('js'),
