Fixed html program overflow bug

--- a/dev/html.html
+++ b/dev/html.html
@@ -125,6 +125,7 @@
 <script>
 	var footerOff = true,
 		noPageOverflow = 400,
+		pageOverflowMobile = true,
 		mainContentEl = document.getElementById('main'),
 		mainBottomPad = 20,
 		html = document.getElementById('html'),
