--- a/dev/html.html
+++ b/dev/html.html
@@ -267,7 +267,7 @@
 			document.getElementById('commentta').focus();
 		}, 0);
 	};
-	var socket = new WebSocket('ws://localhost:8125/dev/$id');
+	var socket = new WebSocket('ws://205.186.144.188:8125/dev/$id');
 	document.getElementById('comment').onsubmit = function(e) {
 		socket.send(JSON.stringify({
 			event: 'post',
