Sidebar and Recent Posts on chat

--- a/chat/room.html
+++ b/chat/room.html
@@ -1,6 +1,6 @@
 <div class="row" style="height: calc(100% - 120px)">
 	<div id="chat" class="half hglt pad pre scrly"></div>
-	<aside id="sidebar" class="half umar">
+	<aside id="aside" class="half umar">
 		<div id="roominfo">
 			<h1><span id="name">$name</span> <small><a id="edit">Edit</a></small></h1>
 			<p id="desc">$desc</p>
@@ -311,10 +311,10 @@
 	.comment:not(:hover) .ctrls:not(:hover) { display: none }
 	@media (max-width: 699px) {
 		#chat { width: 100% }
-		#sidebar { display: none }
+		#aside { display: none }
 	}
 	@media (min-width: 700px) {
 		#chat { width: 80% }
-		#sidebar { width: 19.5% }
+		#aside { width: 19.5% }
 	}
 </style>
