Fixed markdown bugs

--- a/chat/room.html
+++ b/chat/room.html
@@ -1,5 +1,5 @@
 <div class="row" style="height: calc(100% - 120px)">
-	<div id="chat" class="half hglt pad pre scrly"></div>
+	<div id="chat" class="half hglt pad scrly"></div>
 	<aside id="aside" class="half umar">
 		<div id="roominfo">
 			<h1><span id="name">$name</span> <small><a id="edit">Edit</a></small></h1>
