--- a/chat/room.html
+++ b/chat/room.html
@@ -109,14 +109,18 @@
 			div.innerHTML = markdown(data.body);
 			var sig = document.createElement('span');
 			sig.classList.add('c-sig');
-			sig.appendChild(document.createTextNode('-' + data.user + ', '));
+			var user = document.createElement('a');
+			user.href = '/user/' + data.user;
+			user.appendChild(document.createTextNode(data.user));
+			sig.appendChild(user);
+			sig.appendChild(document.createTextNode(', '));
 			var permalink = document.createElement('a');
 			if (!data.time) data.time = new Date().getTime();
 			permalink.appendChild(agot(data.time));
 			permalink.href = '#' + (div.id = data.id);
 			sig.appendChild(permalink);
-			sig.appendChild(document.createTextNode(' '));
-			div.appendChild(sig);
+			sig.appendChild(document.createTextNode(': '));
+			div.insertBefore(sig, div.firstChild);
 			var starcount = document.createElement('span');
 			starcount.classList.add('starcount');
 			starcount.appendChild(document.createTextNode((starcount.dataset.count = data.stars || 0) + '★'));
