Fixed room editing and creating permissions

--- a/chat/room.html
+++ b/chat/room.html
@@ -7,7 +7,7 @@
 		</div>
 		<form id="editform" hidden="">
 			<input id="nameedit" type="text" value="$name" class="large" />
-			<textarea id="descedit" type="text" class="fullwidth">$desc</textarea>
+			<textarea id="descedit" type="text" class="fullwidth">$rawdesc</textarea>
 			<button>Submit</button>
 		</form>
 		<hr />
