--- a/chat/room.html
+++ b/chat/room.html
@@ -54,12 +54,26 @@
 	ctrls.appendChild(ctrlsDelete);
 	ctrls.appendChild(ctrlsFlag);
 	cont.onscroll = function(e) {
-		if (e &amp;&amp; !lock &amp;&amp; innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 72) {
+		onBottom = cont.scrollTop + cont.offsetHeight >= cont.scrollHeight - 2;
+	};
+	setInterval(function() {
+		if (!lock &amp;&amp; innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 180) {
 			skipped = Math.max(0, skipped - 1);
 			socket.send(JSON.stringify({event: 'req', skip: skipped}));
 		}
-		onBottom = cont.scrollTop + cont.offsetHeight >= cont.scrollHeight - 2;
-	};
+	}, 20);
+	setInterval(function() {
+		if (!lock &amp;&amp; innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 720) {
+			skipped = Math.max(0, skipped - 1);
+			socket.send(JSON.stringify({event: 'req', skip: skipped}));
+		}
+	}, 200);
+	setInterval(function() {
+		if (!lock &amp;&amp; innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; cont.scrollHeight / 2) {
+			skipped = Math.max(0, skipped - 1);
+			socket.send(JSON.stringify({event: 'req', skip: skipped}));
+		}
+	}, 400);
 	addEventListener('resize', function() {
 		if (onBottom) cont.scrollTop = cont.scrollHeight;
 	});
@@ -134,7 +148,7 @@
 			if (username) div.appendChild(tCtrls);
 			if (data.before) {
 				cont.insertBefore(div, cont.firstChild);
-				cont.scrollTop += div.offsetHeight;
+				cont.scrollTop += div.offsetHeight + 3;
 			} else cont.appendChild(div);
 			if (data.event == 'add') new Audio('/a/beep.mp3').play();
 			if (onBottom &amp;&amp; !location.hash) cont.scrollTop = cont.scrollHeight;
