Links, regex, errors, and CSS in lessons

--- a/learn/web/html-intro/2.html
+++ b/learn/web/html-intro/2.html
@@ -8,10 +8,10 @@ Setting up a page - Using a Doctype
 			<code class="blk">&lt;!DOCTYPE html></code>
 			<p>This tells the browser that the page is in HTML5. There are other doctypes, but right now you only need to know the doctype of HTML5. Type it in the code area to continue.</p>
 			<button id="check" class="blk" onclick="submit()">Submit</button>
-			<div id="passed" class="clearfix">
+			<div id="passed" class="passed clearfix">
 				<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../3/">Move on →</a></small></h2>
 			</div>
-			<div id="failed" class="clearfix">
+			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
 				Did you copy the HTML5 doctype correctly?
 			</div>
