--- a/learn/web/html-intro/3.html
+++ b/learn/web/html-intro/3.html
@@ -18,10 +18,10 @@ Setting up a page - Tags
 			<p>After the doctype, there is an <code>&lt;html></code> tag. Inside it is <code>&lt;head></code> and <code>&lt;body></code>. The head tag will contain all meta-tags (title, description, etc.), while the body tag will contain visible content.</p>
 			<p>To move on, write the basic page with a doctype and html, head, and body tag.</p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
-			<div id="passed" class="clearfix">
+			<div id="passed" class="passed clearfix">
 				<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../4/">Move on →</a></small></h2>
 			</div>
-			<div id="failed" class="clearfix">
+			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
 				Did you copy the tags correctly? Make sure you have them in the right order.
 			</div>
