--- a/dev/html.html
+++ b/dev/html.html
@@ -14,9 +14,9 @@
 </section>
 <section id="meta">
 	<div class="rit user user-$op">
-		<img src="/a/pic/$op" width="40" height="40" />
+		<img src="$op-pic" width="40" height="40" />
 		<div>
-			<a href="/user/$op/">$op</a>
+			<a href="/user/$op">$op</a>
 			<small class="rep">$op-rep</small>
 		</div>
 	</div>
