Overflow on user-content

--- a/chat/room.html
+++ b/chat/room.html
@@ -277,7 +277,10 @@
 	};
 </script>
 <style>
-	#chat { height: 100% }
+	#chat {
+		height: 100%;
+		overflow: hidden;
+	}
 	#chat img { height: 300px }
 	@media (max-width: 600px) {
 		#chat img { height: 150px }
