Fixed overflow bug in room.html

--- a/chat/room.html
+++ b/chat/room.html
@@ -279,7 +279,7 @@
 <style>
 	#chat {
 		height: 100%;
-		overflow: hidden;
+		overflow-x: hidden;
 	}
 	#chat img { height: 300px }
 	@media (max-width: 600px) {
