--- a/home.html
+++ b/home.html
@@ -23,5 +23,5 @@
 </style>
 <img id="logo-big" src="a/logo1.png" alt="DevDoodle" />
 <hr />
-<div class="hglt pad">DevDoodle is a developer network where you can <a href="learn/">learn languages</a>, <a href="dev/">create and share</a> your own programs, and <a href="qa/">ask and answer questions</a>! We're a bit different from other sites - you can visit our <a href="about">about us</a> page to learn more.</div>
+<p class="hglt pad">DevDoodle is a developer network where you can <a href="learn/">learn languages</a>, <a href="dev/">create and share</a> your own programs, and <a href="qa/">ask and answer questions</a>! We're a bit different from other sites - you can visit our <a href="about">about us</a> page to learn more.</p>
 <p class="bumar"><strong>Note:</strong> This site is in beta, so some features might not work correctly or have not been implemented.</p>
